# internal/api/controllers/private/types.gen.go
@@ -27,6 +27,9 @@ type Error struct {
 	Message string `json:"message"`
 }
 
+// HighLevelJobRequestResponse defines model for HighLevelJobRequestResponse.
+type HighLevelJobRequestResponse []JobRequestInfo
+
 // HighLevelRecipientStatus defines model for HighLevelRecipientStatus.
 type HighLevelRecipientStatus []RecipientWithConnectionInfo
 
@@ -39,6 +42,49 @@ type HostsWithOrgId struct {
 
 	// Identifies the organization that the given resource belongs to
 	OrgId OrgId `json:"org_id"`
+}
+
+// JobRequestBody defines model for JobRequestBody.
+type JobRequestBody struct {
+	Hosts []string `json:"hosts"`
+
+	// Additional metadata about the Playbook run. Can be used for filtering purposes.
+	Labels *externalRef0.Labels `json:"labels,omitempty"`
+
+	// Identifies the organization that the given resource belongs to
+	OrgId OrgId `json:"org_id"`
+
+	// Human readable name of the playbook run. Used to present the given playbook run in external systems (Satellite).
+	PlaybookName *externalRef0.PlaybookName `json:"playbook_name,omitempty"`
+
+	// Username of the user interacting with the service
+	Principal Principal `json:"principal"`
+
+	// Amount of seconds after which the run is considered failed due to timeout
+	Timeout *externalRef0.RunTimeout `json:"timeout,omitempty"`
+
+	// The URL prefix for the playbook generation endpoint for the service
+	Url string `json:"url"`
+
+	// URL that points to the section of the web console where the user find more information about the playbook run. The field is optional but highly suggested.
+	WebConsoleUrl *externalRef0.WebConsoleUrl `json:"web_console_url,omitempty"`
+}
+
+// JobRequestInfo defines model for JobRequestInfo.
+type JobRequestInfo struct {
+
+	// Identifier of the host to which a given Playbook is addressed
+	Recipient externalRef0.RunRecipient `json:"recipient"`
+
+	// Mentions whether or not the playbook run request was successfully forwared to the Cloud Connector service
+	RequestDispatch string `json:"request_dispatch"`
+
+	// Unique identifier of a Playbook run
+	RunId *externalRef0.RunId `json:"run_id,omitempty"`
+
+	// Indicates the current run status of the recipient
+	Status  string   `json:"status"`
+	Systems []HostId `json:"systems"`
 }
 
 // OrgId defines model for OrgId.
@@ -234,6 +280,9 @@ type ApiInternalV2RunsCreateJSONBody []RunInputV2
 // ApiInternalV2RecipientsStatusJSONBody defines parameters for ApiInternalV2RecipientsStatus.
 type ApiInternalV2RecipientsStatusJSONBody []RecipientWithOrg
 
+// ApiInternalHighlevelJobRequestJSONBody defines parameters for ApiInternalHighlevelJobRequest.
+type ApiInternalHighlevelJobRequestJSONBody JobRequestBody
+
 // ApiInternalRunsCreateRequestBody defines body for ApiInternalRunsCreate for application/json ContentType.
 type ApiInternalRunsCreateJSONRequestBody ApiInternalRunsCreateJSONBody
 
@@ -248,3 +297,6 @@ type ApiInternalV2RunsCreateJSONRequestBody ApiInternalV2RunsCreateJSONBody
 
 // ApiInternalV2RecipientsStatusRequestBody defines body for ApiInternalV2RecipientsStatus for application/json ContentType.
 type ApiInternalV2RecipientsStatusJSONRequestBody ApiInternalV2RecipientsStatusJSONBody
+
+// ApiInternalHighlevelJobRequestRequestBody defines body for ApiInternalHighlevelJobRequest for application/json ContentType.
+type ApiInternalHighlevelJobRequestJSONRequestBody ApiInternalHighlevelJobRequestJSONBody
